--- a/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
+++ b/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
@@ -10,22 +10,52 @@
     <lightning-record-edit-form object-api-name="Case" record-id={recordId} onsuccess={handleSuccess} onerror={handleError}>
         <div class="slds-grid slds-gutters slds-m-around_xx-small">
             <div class="slds-col slds-size_1-of-2">
-                <!-- Add fields for left column -->
-                <lightning-input-field field-name="Subject" required disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="Origin" required disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="Priority" disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="Reason" required disabled={isReadOnly}></lightning-input-field>
-                <lightning-output-field field-name="OwnerId" disabled={isReadOnly}></lightning-output-field>
+                <!-- Render left column fields -->
+            <template for:each={leftFields} for:item="field">
+                <template if:true={field.outputField}>
+                    <lightning-output-field key={field.fieldName} field-name={field.fieldName} disabled={field.disabled}></lightning-output-field>
+                </template>
+                <template if:false={field.outputField}>
+                    <lightning-input-field 
+                        key={field.fieldName} 
+                        field-name={field.fieldName} 
+                        required={field.required} 
+                        disabled={field.disabled} 
+                        onchange={handleFieldChange}
+                    ></lightning-input-field>
+                </template>
+            </template>
             </div>
             <div class="slds-col slds-size_1-of-2">
-                <!-- Add fields for right column -->
-                <lightning-input-field field-name="ParentId" disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="Status" required disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="Description" disabled={isReadOnly}></lightning-input-field>
-                <lightning-input-field field-name="AccountId" required disabled={isReadOnly} onchange={handleAccountChange}></lightning-input-field>
-                <lightning-combobox label="Contact" value={contactId} options={contactOptions} onchange={handleContactChange} disabled={isReadOnly}></lightning-combobox>
+                <!-- Render right column fields -->
+                <template for:each={rightFields} for:item="field">
+                    <template if:true={field.outputField}>
+                        <lightning-output-field key={field.fieldName} field-name={field.fieldName} disabled={field.disabled}></lightning-output-field>
+                    </template>
+                    <template if:false={field.outputField}>
+                        <lightning-input-field 
+                            key={field.fieldName} 
+                            field-name={field.fieldName} 
+                            required={field.required} 
+                            disabled={field.disabled} 
+                            onchange={handleFieldChange}
+                        ></lightning-input-field>
+                    </template>
+                    <template if:true={field.isCombobox}>
+                        <lightning-combobox 
+                            key={field.label} 
+                            label={field.label} 
+                            value={contactId} 
+                            options={contactOptions} 
+                            onchange={handleFieldChange} 
+                            disabled={field.disabled}
+                        ></lightning-combobox>
+                    </template>
+                </template>
+                
                 <!-- Hidden input field to store the selected contact ID -->
                 <lightning-input-field field-name="ContactId" value={contactId} class="slds-hide" disabled={isReadOnly}></lightning-input-field>
+                
                 <div class="slds-m-top_medium">
                     <lightning-button-icon icon-name="utility:add" alternative-text="New Contact" onclick={handleNewContactClick} class="slds-m-left_x_small" disabled={isReadOnly}></lightning-button-icon> &nbsp;Create New Contact
                 </div>
