Added Profile Specific Visibility framework and hook in JS - Logic required to extend

--- a/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
+++ b/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
@@ -54,7 +54,8 @@
                                         field-name={field.apiName}
                                         required={field.required}
                                         onchange={fieldChangeHandler}
-                                        disabled={field.readOnly}>
+                                        disabled={field.readOnly}
+                                        data-name={field.apiName}>
                                     </lightning-input-field>
                                 </template>
                             </div>
