Closed Visibility & Admin Control
Admin can edit closed cases and alert added for normal users trying to edit Closed Cases and UI rendering bugfixes

--- a/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
+++ b/Case_Work/Lightning Web Component/newCaseLWC/newCaseLWC.html
@@ -2,7 +2,7 @@
 @description       : 
 @author            : Kuldeep Singh
 @group             : 
-@last modified on  : 07-05-2024
+@last modified on  : 07-06-2024
 @last modified by  : Kuldeep Singh
 -->
 <template>
@@ -64,7 +64,7 @@
                 </div>
             </template>
 
-            <!-- Dynamic Rendering of Form From Field Mapper Begin -->
+            <!-- Dynamic Rendering of Form From Field Mapper End -->
             
             <!-- Button Group Section Begin-->
             
