--- a/Flow Templates Samples/Case Sample X/Sample_X.html
+++ b/Flow Templates Samples/Case Sample X/Sample_X.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <div>
+  <div style="font-family: 'Calibri', monospace; font-size: 12px;">
     <p>Case# {!$Record.CaseNumber} has been assigned to Product Operations.</p>
     <p><strong>Subject: </strong> {!$Record.Subject}</p>
     <p><strong>Description:</strong> {!$Record.Description}</p>
